Add link to feijoada page

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/feijoada.html" target="_blank" rel="noopener noreferrer">Feijoada Recipe</a>
     </body>
 </html>
