--- a/recipes/feijoada.html
+++ b/recipes/feijoada.html
@@ -10,5 +10,6 @@
         <h1>
             Feijoada
         </h1>
+        <a href="../index.html" target="_blank" rel="noopener noreferrer">Main Page</a>
     </body>
 </html>
