Add image of feijoada

--- a/recipes/feijoada.html
+++ b/recipes/feijoada.html
@@ -10,6 +10,10 @@
         <h1>
             Feijoada
         </h1>
-        <a href="../index.html" target="_blank" rel="noopener noreferrer">Main Page</a>
+
+        <img src="../images/2148875292.jpg" alt="An overhead view of a bowl filled with feijoada, a traditional brazilian dish." width="667" height="1000">
+
+        <p><a href="../index.html" target="_blank" rel="noopener noreferrer">Main Page</a></p>
+
     </body>
 </html>
