Add ingredients and fixings lists

--- a/recipes/feijoada.html
+++ b/recipes/feijoada.html
@@ -14,8 +14,49 @@
         <img src="../images/2148875292.jpg" alt="An overhead view of a bowl filled with feijoada, a traditional brazilian dish." width="667" height="1000">
 
         <h2>Description</h2>
+
         <p>Feijoada (pronounced fey-joou-ah-dah) is the most traditional national dish of Brazil. At its core it is a slow-cooked black beans stew, alongside a assortment of flavorful pork and sometimes beef cuts. Unlike a simple bean soup, the feijoada completa includes smoked sausages like linguiça and paio, along with salted and cured cuts such as ham hocks and bacon, all traditionally accompanied by bright white rice, crunchy toasted manioc flour, collard greens and sliced oranges.</p>
+
         <p>This hearty dish is a perfect reflection of Brazil's diverse history and cultural fusion. While the concept of a meat and bean stew has roots in Portuguese cuisine, the use of black beans and the distinctly rich, communal style of preparation evolved during the colonial era, often attributed to the ingenuity of enslaved Africans who adapted inexpensive cuts of meat into the dish. What was once sustenance to the oppressed with time became a celebratory tradition, bringing families together on Saturday afternoon around the same delicious food. Follow the steps to make it yourself.</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <h3>Beans</h3>
+            <li>Black Beans (feijão preto)</li>
+
+
+            <h3>Cured & Smoked Meats</h3>
+            
+            <li>Smoked Pork Ribs</li>
+            <li>Smoked Pork Shoulder or Hocks</li>
+            <li>Dried/Salted Beef</li>
+            <li>Smoked Sausage</li>
+            <li>Pork Paio Sausage</li>
+            <li>Bacon</li>
+            <li>Pig's Ears or Tails (optional)</li>
+
+            <h3>Aromatics & Seasoning</h3>
+            <li>Garlic</li>
+            <li>Bay Leaves</li>
+            <li>Orange Peel (optinal but recommended)</li>
+            <li>Olive Oil or Lard</li>
+            <li>Salt & Black Pepper</li>
+        
+        </ul>
+
+        <h2>Fixings</h2>
+        <ul>
+            <li>White Rice</li>
+            <li>Collard Greens</li>
+            <li>Toasted Manioc Flour</li>
+            <li>Oranges</li>
+            <li>Hot Sauce</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+
+        </ol>
 
         <p><a href="../index.html" target="_blank" rel="noopener noreferrer">Main Page</a></p>
 
