Add yellow onions aromatics and seasoning sub-list

--- a/recipes/feijoada.html
+++ b/recipes/feijoada.html
@@ -36,6 +36,7 @@
             <li>Pig's Ears or Tails (optional)</li>
 
             <h3>Aromatics & Seasoning</h3>
+            <li>Yellow Onion</li>
             <li>Garlic</li>
             <li>Bay Leaves</li>
             <li>Orange Peel (optinal but recommended)</li>
