--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/feijoada.html" target="_blank" rel="noopener noreferrer">Feijoada Recipe</a>
+        <ul>
+        <li><a href="recipes/feijoada.html" target="_blank" rel="noopener noreferrer">Feijoada Recipe</a></li>
+        <li><a href='recipes/cuscuz.html' target='_blank' rel='noopener noreferrer'>Cuscuz Recipe</a></li>
+        </ul>
     </body>
 </html>
