Add basic structure

--- a/recipes/cuscuz.html
+++ b/recipes/cuscuz.html
@@ -7,6 +7,17 @@
     </head>
     <body>
         <h1>Cuscuz</h1>
+        <h2>Description</h2>
+        <p></p>
+        <p></p>
+
+        <h2>Ingredients</h2>
+        <ul></ul>
+        
+        <h2>Steps</h2>
+        <ol>
+
+        </ol>
         <a href="../index.html" target="_blank" rel="noopener noreferrer">Main Page</a>
     </body>
 </html>
