Add cuscuzeira description & image

--- a/recipes/cuscuz.html
+++ b/recipes/cuscuz.html
@@ -14,7 +14,14 @@
         <p>The origins of this dish are a fascinating culinary intersection. It traces back to the  Berbers of North Africa (who brought the steaming technique to Portugal), but upon arriving in Brazil, colonizers adapted the method to the abundant native ingredient: corn. It became a staple food due to its low cost, high energy, and ease of preparation. Today in places like Pernambuco, the smell of cuscuz steaming is the universal alarm clock. It is democratic and beloved, eaten by everyone from the humblest worker to the wealthiest landowner, often served simply with a generous pat of butter melting into its yellow crevices, or dressed up with the sun-dried beef and cheese.</p>
 
         <h2>Ingredients</h2>
-        <ul></ul>
+        <h3>Essential Equipment</h3>
+        <p><strong>Cuscuzeira</strong> the specific steaming pot shaped like an hourglass (image below) is needed if you want to make the dish the traditional way. If you don't have one, you can improvise with a steamer basket and a pot, but the cuscuzeira is the standard.</p>
+
+        <img src="../images/cuscuzeira-aluminio-16cm-lar-25l-tramontina-20239016-528644cd-76x8wx9rdw.webp" alt="Image of a black cuscuzeira" width="600" height="600">
+        
+        <ul>
+            
+        </ul>
 
         <h2>Steps</h2>
         <ol>
