Add ingredients list  quantities & descriptions

--- a/recipes/cuscuz.html
+++ b/recipes/cuscuz.html
@@ -20,7 +20,30 @@
         <img src="../images/cuscuzeira-aluminio-16cm-lar-25l-tramontina-20239016-528644cd-76x8wx9rdw.webp" alt="Image of a black cuscuzeira" width="600" height="600">
         
         <h2>Ingredients</h2>
+
         <ul>
+
+            <li><h3>Corn Flakes (Flocão de Milho)</h3>
+                <h4>2 cups</h4>
+                <p><em>Flocão is essential;</em> fine cornmeal (fubá) will not work the same way.</p>
+            </li>
+
+            <li>
+                <h3>Water</h3>
+                <h4>1 cup</h4>
+                <p>Room temperature. Amount varies slightly by humidity.</p>
+            </li>
+
+            <li>
+                <h3>Salt</h3> 
+                <h4>1 tablespoon</h4>
+                <p>To taste</p>
+            </li>
+            <li>
+                <h3>Tapioca Starch (optional)</h3> 
+                <h4>1-2 tablespoon/s</h4>
+                <p>Known as the "secret" for a slightly more cohesive texture, but not strictly traditional nor necessary.</p>
+            </li>
             
         </ul>
 
