--- a/recipes/cuscuz.html
+++ b/recipes/cuscuz.html
@@ -44,8 +44,33 @@
                 <h4>1-2 tablespoon/s</h4>
                 <p>Known as the "secret" for a slightly more cohesive texture, but not strictly traditional nor necessary.</p>
             </li>
-            
+
         </ul>
+
+        <h2>Fixings</h2>
+        <ul>
+            <li>
+              <h3>The Classic</h3>
+              <p>Salted Butter (or Manteiga de Garrafa - clarified bottled butter common in the Northeast).</p>
+            </li>
+
+            <li>
+                <h3>The protein</h3>
+                <p>Scrambled or fried eggs, sun-dried beef, or slice Calabresa sausage</p>
+            </li>
+
+            <li>
+                <h3>The Dairy</h3>
+                <p>Slices of <em>Queijo Coalho</em> (squeaky cheese) or warm milk poured over the crumbled cuscuz (making it "Cuscuz com Leite").</p>
+            </li>
+
+            <li>
+                <h3>The Sweet</h3>
+                <p> Fresh grated coconut and coconut milk (often eaten for dinner or dessert).</p>
+            </li>
+
+
+        </ul>        
 
         <h2>Steps</h2>
         <ol>
