Fix typo add water steps subheading

--- a/recipes/cuscuz.html
+++ b/recipes/cuscuz.html
@@ -81,7 +81,7 @@
                     </li>
                     <li>
                         <h4>Add Water</h4>
-                        <p>Slowly pour the water over the flakes while stirring with you hand or a spoon. You want the mixturre to feel like damp sand, enough to clump together if you squeeze it, but still easily crumbling apart. <strong>Do not turn it into a soup.</strong></p>
+                        <p>Slowly pour the water over the flakes while stirring with you hand or a spoon. You want the mixture to feel like damp sand, enough to clump together if you squeeze it, but still easily crumbling apart. <strong>Do not turn it into a soup.</strong></p>
                     </li>
                     <li>
                         <h4>The Rest</h4>
