Add quantities into ingredients list

--- a/recipes/feijoada.html
+++ b/recipes/feijoada.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content='width=device-width, initial-scale=1.0'>
-        <title>Favorite Recipe</title>
+        <title>Feijoada</title>
     </head>
 
     <body>
@@ -22,29 +22,84 @@
         <h2>Ingredients</h2>
             <h3>Beans</h3>
             <ul>
-                  <li>Black Beans (feijão preto)</li>
+                  <li>Black Beans (feijão preto 
+                    <p><strong>1lb (about 450g)</strong></p>
+                    <br>
+                  </li>
             </ul>
 
 
             <h3>Cured & Smoked Meats</h3>
                 <ul>
-                    <li>Smoked Pork Ribs</li>
-                    <li>Smoked Pork Shoulder or Hocks</li>
-                    <li>Dried/Salted Beef</li>
-                    <li>Smoked Sausage</li>
-                    <li>Pork Paio Sausage</li>
-                    <li>Bacon</li>
-                    <li>Pig's Ears or Tails (optional)</li>
+                    <li>
+                        Smoked Pork Ribs 
+                        <p><strong>1 lb</strong></p>
+                        <br>
+                    </li>
+                    <li>
+                        Smoked Pork Shoulder or Hocks
+                        <p><strong>1 (small)</strong></p>
+                        <br>
+                    </li>
+                    <li>
+                        Dried/Salted Beef
+                        <p><strong>1/2 lb</strong></p>
+                        <br>
+                    </li>
+                    <li>
+                        Smoked Sausage
+                        <p><strong>1 link (approx. 8 oz)</strong></p>
+                        <br>
+                    </li>
+                    <li>
+                        Pork Paio Sausage
+                        <p><strong>1 link (approx. 8 oz)</strong></p>
+                        <br>
+                    </li>
+                    <li>
+                        Bacon (toucinho)
+                        <p><strong>4 oz</strong></p>
+                        <br>
+                    </li>
+                    <li>
+                        Pig's Ears or Tails (optional)
+                        <p><strong>1-2 pieces</strong></p>
+                        <br>
+                    </li>
                 </ul>
 
             <h3>Aromatics & Seasoning</h3>
                 <ul>
-                    <li>Yellow Onion</li>
-                    <li>Garlic</li>
-                    <li>Bay Leaves</li>
-                    <li>Orange Peel (optinal but recommended)</li>
-                    <li>Olive Oil or Lard</li>
-                    <li>Salt & Black Pepper</li>
+                    <li>
+                        Yellow Onion
+                        <p><strong>1 large</strong></p>
+                        <br>
+                    </li>
+                    <li>
+                        Garlic
+                        <p><strong>8-10 cloves</strong></p>
+                        <br> 
+                    </li>
+                    <li>
+                        Bay Leaves
+                        <p><strong>3</strong></p>
+                        <br>
+                    </li>
+                    <li>
+                        Orange Peel (optinal but recommended)
+                        <p><strong>1 strip</strong></p>
+                        <br>
+                    </li>
+                    <li>
+                        Olive Oil or Lard
+                        <p><strong>2 tablespoons</strong></p>
+                        <br>
+                    </li>
+                    <li>
+                        Salt & Black Pepper
+                        <p><strong>To taste</strong></p>
+                        <br>
+                    </li>
         
                 </ul>
 
