Add thank you message

--- a/recipes/feijoada.html
+++ b/recipes/feijoada.html
@@ -115,7 +115,7 @@
         <h2>Steps</h2>
         <p>Follow the step by step process to have a delicious feijoada stewed and ready to be served</p>
         <ol>
-            <li><strong>Preparation (the day before)</strong>
+            <li><h3>Preparation (the day before)</h3>
                 <ol>
                     <li>
                         <h4>Soak the Beans</h4>
@@ -131,7 +131,7 @@
                 </ol>
             </li>
     
-            <li><strong>Pre-Cooking the Meats</strong>
+            <li><h3>Pre-Cooking the Meats</h3>
                 <ol>
                     <li>
                         <h4>Parboil Meats</h4>
@@ -145,8 +145,7 @@
                     </li>
                 </ol>
             </li>
-            <li>
-                <strong>The Long Simmer</strong>
+            <li><h3>The Long Simmer</h3>
                 <ol>
                     <li>
                         <h4>First Simmer</h4>
@@ -155,13 +154,12 @@
                     <li>
                         <h4>Add Sausages</h4>
                         <p>After the first simmer, add the sliced smoked and paio sausages to the pot. Continue to simmer, covered, for another 30 minutes to 1 hour.</p>
-                        <br>
                     </li>
                 </ol>
             </li>
 
             <li>
-                <strong>Building the Flavor Base (Temperagem)</strong>
+                <h3>Building the Flavor Base (Temperagem)</h3>
                 <ol>
                     <li>
                         <h4>Sauté Aromatics</h4>
@@ -197,7 +195,10 @@
             </li>
 
         </ol>
+        <br>
 
+        <p><Strong>Thanks for following this magnificent recipe, see more below, have a great meal!</Strong></p>
+        <br>
 
         <p><a href="../index.html" target="_blank" rel="noopener noreferrer">Main Page</a></p>
 
