--- a/recipes/tapioca.html
+++ b/recipes/tapioca.html
@@ -8,6 +8,12 @@
     <body>
         <h1>Tapioca</h1>
         
+        <img src="../images/alimentos-para-turbinar-a-alimentacao-infantil-1395769953063_v2_900x506.jpg" alt="An overhead image of three tapiocas">
+
         <h2>Description</h2>
+        
+
+        <a href="../index.html" target="_blank" rel="noopener noreferrer">Main Page</a>
     </body>
+
 </html>
