Add link to buy cuscuzeira

--- a/recipes/cuscuz.html
+++ b/recipes/cuscuz.html
@@ -18,7 +18,7 @@
 
         <h2>Essential Equipment</h2>
     
-        <p>A <strong>cuscuzeira</strong> the specific steaming pot shaped like an hourglass (image below) is needed if you want to make the dish the traditional way. If you don't have one, you can improvise with a steamer basket and a pot, but the cuscuzeira is the standard.</p>
+        <p><h3><a href='https://brazilianstyle.com.au/products/cuscuzeira-pan-medium-no-1?srsltid=AfmBOoqWTX8uZoIafdMPbC6WkOy9RHGJzVtVTzGBQixNGYQwpBx0x_X2' target='_blank' rel='noopener noreferrer'>Cuscuzeira</a>:</h3> The specific steaming pot shaped like an hourglass (image below) is needed if you want to make the dish the traditional way. If you don't have one, you can improvise with a steamer basket and a pot, but the cuscuzeira is the standard.</p>
 
         <img src="../images/cuscuzeira-aluminio-16cm-lar-25l-tramontina-20239016-528644cd-76x8wx9rdw.webp" alt="Image of a black cuscuzeira" width="600" height="600">
         
