--- a/recipes/tapioca.html
+++ b/recipes/tapioca.html
@@ -11,7 +11,11 @@
         <img src="../images/alimentos-para-turbinar-a-alimentacao-infantil-1395769953063_v2_900x506.jpg" alt="An overhead image of three tapiocas">
 
         <h2>Description</h2>
-        
+        <p>If you are walking through the streets of Recife or climbing the slopes of Olinda (especially at the Alto da Sé), you will inevitably smell the toasty aroma of Tapioca. Often misunderstood internationally as a pudding, the true Brazilian tapioca is a starch pancake, crispy on the edges, chewy in the center, and stark white. It is the ultimate blank canvas of Northeastern cuisine. Made from the starch of the cassava root (manioc), it is naturally gluten-free and requires no oil to cook, making it a beloved alternative to bread. The magic lies in its texture: it isn't a batter, but a moistened powder that, when it hits a hot pan, fuses together into a cohesive, flexible disk.</p>
+
+        <p>The history of Tapioca is the history of Brazil before colonization. Long before the Portuguese arrived, the Tupi-Guarani indigenous peoples had mastered the processing of cassava (mandioca), extracting the poisonous juices and isolating the starch (tipi'óka). When the colonizers struggled to grow wheat in the tropical climate, they adopted this indigenous "bread" as a staple survival food. Over centuries, it evolved from a simple sustenance item into a cultural icon. In 2006, the craft of the "Tapioqueiras" in Olinda was declared an Intangible Cultural Heritage, cementing this humble dish as a symbol of Pernambuco’s identity.</p>
+
+        <h2>Essential Equipment</h2>
 
         <a href="../index.html" target="_blank" rel="noopener noreferrer">Main Page</a>
     </body>
