Add essential equipments with links

--- a/recipes/tapioca.html
+++ b/recipes/tapioca.html
@@ -16,6 +16,16 @@
         <p>The history of Tapioca is the history of Brazil before colonization. Long before the Portuguese arrived, the Tupi-Guarani indigenous peoples had mastered the processing of cassava (mandioca), extracting the poisonous juices and isolating the starch (tipi'óka). When the colonizers struggled to grow wheat in the tropical climate, they adopted this indigenous "bread" as a staple survival food. Over centuries, it evolved from a simple sustenance item into a cultural icon. In 2006, the craft of the "Tapioqueiras" in Olinda was declared an Intangible Cultural Heritage, cementing this humble dish as a symbol of Pernambuco’s identity.</p>
 
         <h2>Essential Equipment</h2>
+        <ul>
+            <li>
+                <h3><a href='amazon.com/SENSARTE-Nonstick-Frying-Pan-Skillet/dp/B086PHS2V8/ref=sr_1_6?dib=eyJ2IjoiMSJ9.qntkdryuRKja_83_9_fjFAeLdywxrqg59gdwcYHIoXJA0Bwb42uXHzUn4Q109gMBbGNBOwowh3FC19N0l620J5d-4IaSWvlCLUyLgniWI0N9CE28WqC0YzrA2btkEBr5PlhigK4ZWdiTok9cUgPUWZ-lhPzpGsWMWZ5ZhZ1asS2pv8TYSw--BQukIAJqn9vJrgOkXaDjwqcbFXxkMQAcfgi3TWcx1twUiaUbbX0Nt1-DBnT1MqJ4KfFXJFR6oXarXvTM5h6fdUnvLwa9aG8GpQWowERc_cyGMMtFczgILTk.uPc04feJXSsiQad_Ai4L8Kyw6uESJmX3XUVsk4vbwmA&dib_tag=se&keywords=best+nonstick+pan&qid=1764178844&sr=8-6' target='_blank' rel='noopener noreferrer'>Non Sticking Frying Pan</a>:</h3>
+                <p>A small to medium skillet (approx. 20cm). No oil or grease is need in the pan.</p>
+            </li>
+            <li>
+                <h3><a href="https://www.walmart.com/ip/Mainstays-6-inch-stainless-steel-mesh-STRAINER/12895866150?classType=REGULAR&athbdg=L1102" target="_blank" rel="noopener noreferrer">Fine Sieve/Strainer</a></h3>
+                <p>The most important tool</p>
+            </li>
+        </ul>
 
         <a href="../index.html" target="_blank" rel="noopener noreferrer">Main Page</a>
     </body>
