--- a/recipes/tapioca.html
+++ b/recipes/tapioca.html
@@ -27,6 +27,22 @@
             </li>
         </ul>
 
+        <h2>Ingredients</h2>
+        <ul>
+            <li>
+                <h3>Hydrated Tapioca Starch (Goma de Tapioca)</h3>
+                <p>1 cup (for 2 tapiocas)</p>
+            </li>
+            <li>
+               <h3>Salt</h3>
+                <p>Pinch</p>
+            </li>
+            <li>
+                <h3>Butter</h3> 
+                <p>To taste</p>
+            </li>
+        </ul>
+
         <a href="../index.html" target="_blank" rel="noopener noreferrer">Main Page</a>
     </body>
 
