--- a/recipes/tapioca.html
+++ b/recipes/tapioca.html
@@ -43,6 +43,32 @@
             </li>
         </ul>
 
+        <h2>Fixings</h2>
+        <ul>
+            <li>
+                <h3>The Traditional (Breakfast)</h3>
+                <p>Just butter (com manteiga). The heat of the tapioca melts it instantly</p>
+            </li>
+            <li>
+                <h3>The "Romeo and Juliet"</h3>
+                <p>Queijo coalho (salty cheese) + goiabada (guava paste)</p>
+            </li>
+            <li>
+                <h3>The Tourist Favorite</h3>
+                <p>Fresh grated coconut + Condensed milk (sweet ad very rich).</p>
+            </li>
+            <li>
+                <h3>The Hearty</h3>
+                <p>Shredded dried beef (Carne de Sol) + Cream cheese (Requeijão)</p>
+            </li>
+            <li>
+                <h3>The Cartola Style</h3>
+                <p>Banana, cinnamon, sugar, and cheese.</p>
+            </li>
+        </ul>
+
+
+        
         <a href="../index.html" target="_blank" rel="noopener noreferrer">Main Page</a>
     </body>
 
