--- a/recipes/tapioca.html
+++ b/recipes/tapioca.html
@@ -67,8 +67,94 @@
             </li>
         </ul>
 
+        <h2>Steps</h2>
+        <ol>
+        <li>
+            <h3>Prep the "Goma" (The Powder)</h3>
+            <ol>
+                <li>
+                    <h4>Season</h4>
+                    <p>Place your hydrated tapioca starch (goma) ina  bowl. Add a pinch of salt and mix with your fingers.</p>
+                </li>
+                <li>
+                    <h4>Sieve</h4>
+                    <p>This is the secret step. Pass the starch through a sieve directly into a bowl. Use a spoon or your hand to push it through. The result should look like a pile of fine, snowy powder. <strong>Do not compress it.</strong></p>
+                </li>
+            </ol>
+        </li>
+        <li>
+            <h3>The Pan</h3>
+            <ol>
+                <li>
+                    <h4>Heat:</h4>
+                    <p>Place a non-stick skillet over medium-low heat. Let it get hot (but not smoking). Do not add oil or butter to the pan.</p>
+                </li>
+                <li>
+                    <h4>Spread:</h4>
+                    <p>Spoon the sifted powder into the center of the hot pan.</p>
+                </li>
+                <li>
+                    <h4>Shape:</h4>
+                    <p>Use the back of a spoon to gently spread the powder outwards toward the edges to form a circle.</p>
+                    <ul>
+                        <li>
+                            <h5>Note</h5>
+                            <p>Don't pat it down too hard; you want it to remain slightly airy. Aim for a thickness of about 5mm (roughly a quarter-inch). <em>If it's too thin, it breaks; too thick, it gets gummy.</em></p>
+                        </li>
+                    </ul>
+                </li>
+            </ol>
+        </li>
+        <li>
+            <h3>The Fusion</h3>
+            <ol>
+                <li>
+                    <h4>Cook:</h4>
+                    <p>Let it cook undisturbed for about <strong>2 minutes.</strong></p>
+                </li>
+                <li>
+                    <h4>The Sign:</h4>
+                    <p>You will know it is ready to flip when the granules stick together, and the entire disk moves as one unit when you shake the pan. The bottom should be smooth, not browned.</p>
+                </li>    
+                <li>
+                    <h4>Flip:</h4>
+                    <p>Carefully flip the disk over. Cook the other side for just <strong>30 seconds to 1 minute.</strong> You want it fully cooked but still soft and flexible, not hard like a cracker.</p>
+                </li>
+            </ol>
+        </li>
+        <li>
+            <h3>The Filling</h3>
+            <ol>
+                <li>
+                    <h4>Fill:</h4>
+                    <p>Turn the heat down to lor (or off). Sprinkle your chosen filling (e.g., cheese, coconut, beef) over <strong>one half</strong> of the circle.</p>
+                </li>
+                <li>
+                    <h4>Fold:</h4>
+                    <p>Fold the empty half over the filled half, creating a half-moon shape. Press down gently to seal.</p>
+                </li>
+            </ol>
+        </li>
+        <li>
+            <h3>Serve</h3>
+            <ol>
+                <li>
+                    <h4>Finish:</h4>
+                    <p>Slide it onto a plate. If serving traditionally, brush the outside witha  little melted butter.</p>
+                </li>
+                <li>
+                    <h3>Enjoy:</h3>
+                    <p>Eat immediately while the starch is soft and the filling is gooey. As tapioca cools, it becomes rubbery, so speed is key!</p>
+                </li>
+            </ol>
+        </li>
 
-        
+        <br>
+
+        <p><strong>Thanks for following our recipe! If you want to cook some more, check out our homepage!</strong></p>
+
+        <br>
+
         <a href="../index.html" target="_blank" rel="noopener noreferrer">Main Page</a>
     </body>
 
