Add spaces between subheadings & remove colons

--- a/recipes/tapioca.html
+++ b/recipes/tapioca.html
@@ -15,6 +15,8 @@
 
         <p>The history of Tapioca is the history of Brazil before colonization. Long before the Portuguese arrived, the Tupi-Guarani indigenous peoples had mastered the processing of cassava (mandioca), extracting the poisonous juices and isolating the starch (tipi'óka). When the colonizers struggled to grow wheat in the tropical climate, they adopted this indigenous "bread" as a staple survival food. Over centuries, it evolved from a simple sustenance item into a cultural icon. In 2006, the craft of the "Tapioqueiras" in Olinda was declared an Intangible Cultural Heritage, cementing this humble dish as a symbol of Pernambuco’s identity.</p>
 
+        <br>
+
         <h2>Essential Equipment</h2>
         <ul>
             <li>
@@ -26,6 +28,8 @@
                 <p>The most important tool</p>
             </li>
         </ul>
+
+        <br>
 
         <h2>Ingredients</h2>
         <ul>
@@ -42,6 +46,8 @@
                 <p>To taste</p>
             </li>
         </ul>
+
+        <br>
 
         <h2>Fixings</h2>
         <ul>
@@ -67,6 +73,8 @@
             </li>
         </ul>
 
+        <br>
+
         <h2>Steps</h2>
         <ol>
         <li>
@@ -82,19 +90,22 @@
                 </li>
             </ol>
         </li>
+
+        <br>
+
         <li>
             <h3>The Pan</h3>
             <ol>
                 <li>
-                    <h4>Heat:</h4>
+                    <h4>Heat</h4>
                     <p>Place a non-stick skillet over medium-low heat. Let it get hot (but not smoking). Do not add oil or butter to the pan.</p>
                 </li>
                 <li>
-                    <h4>Spread:</h4>
+                    <h4>Spread</h4>
                     <p>Spoon the sifted powder into the center of the hot pan.</p>
                 </li>
                 <li>
-                    <h4>Shape:</h4>
+                    <h4>Shape</h4>
                     <p>Use the back of a spoon to gently spread the powder outwards toward the edges to form a circle.</p>
                     <ul>
                         <li>
@@ -105,45 +116,54 @@
                 </li>
             </ol>
         </li>
+
+        <br>
+
         <li>
             <h3>The Fusion</h3>
             <ol>
                 <li>
-                    <h4>Cook:</h4>
+                    <h4>Cook</h4>
                     <p>Let it cook undisturbed for about <strong>2 minutes.</strong></p>
                 </li>
                 <li>
-                    <h4>The Sign:</h4>
+                    <h4>The Sign</h4>
                     <p>You will know it is ready to flip when the granules stick together, and the entire disk moves as one unit when you shake the pan. The bottom should be smooth, not browned.</p>
                 </li>    
                 <li>
-                    <h4>Flip:</h4>
+                    <h4>Flip</h4>
                     <p>Carefully flip the disk over. Cook the other side for just <strong>30 seconds to 1 minute.</strong> You want it fully cooked but still soft and flexible, not hard like a cracker.</p>
                 </li>
             </ol>
         </li>
+
+        <br>
+
         <li>
             <h3>The Filling</h3>
             <ol>
                 <li>
-                    <h4>Fill:</h4>
+                    <h4>Fill</h4>
                     <p>Turn the heat down to lor (or off). Sprinkle your chosen filling (e.g., cheese, coconut, beef) over <strong>one half</strong> of the circle.</p>
                 </li>
                 <li>
-                    <h4>Fold:</h4>
+                    <h4>Fold</h4>
                     <p>Fold the empty half over the filled half, creating a half-moon shape. Press down gently to seal.</p>
                 </li>
             </ol>
         </li>
+
+        <br>        
+
         <li>
             <h3>Serve</h3>
             <ol>
                 <li>
-                    <h4>Finish:</h4>
+                    <h4>Finish</h4>
                     <p>Slide it onto a plate. If serving traditionally, brush the outside witha  little melted butter.</p>
                 </li>
                 <li>
-                    <h3>Enjoy:</h3>
+                    <h3>Enjoy</h3>
                     <p>Eat immediately while the starch is soft and the filling is gooey. As tapioca cools, it becomes rubbery, so speed is key!</p>
                 </li>
             </ol>
