Fix br elements & close main ol
running the code through markup inspector demonstrated that the element
<br> isn't accepted inside an <ol> I presume it isn't allowed inside
<ul> too. I don't know any alternatives at this moment so I just left
the text without the spaces, although it hinders readability.

--- a/recipes/tapioca.html
+++ b/recipes/tapioca.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" width="device-width", initial-scale="1.0">
+        <meta name="viewport" content="width=device-width, initial scale=1.0">
         <title>Tapioca</title>
     </head>
     <body>
@@ -91,8 +91,6 @@
             </ol>
         </li>
 
-        <br>
-
         <li>
             <h3>The Pan</h3>
             <ol>
@@ -117,8 +115,6 @@
             </ol>
         </li>
 
-        <br>
-
         <li>
             <h3>The Fusion</h3>
             <ol>
@@ -137,8 +133,6 @@
             </ol>
         </li>
 
-        <br>
-
         <li>
             <h3>The Filling</h3>
             <ol>
@@ -151,9 +145,7 @@
                     <p>Fold the empty half over the filled half, creating a half-moon shape. Press down gently to seal.</p>
                 </li>
             </ol>
-        </li>
-
-        <br>        
+        </li>  
 
         <li>
             <h3>Serve</h3>
@@ -168,6 +160,7 @@
                 </li>
             </ol>
         </li>
+    </ol>
 
         <br>
 
