--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-        <li><a href="recipes/feijoada.html" target="_blank" rel="noopener noreferrer">Feijoada Recipe</a></li>
-        <li><a href='recipes/cuscuz.html' target='_blank' rel='noopener noreferrer'>Cuscuz Recipe</a></li>
+            <li><a href="recipes/feijoada.html" target="_blank" rel="noopener noreferrer">Feijoada Recipe</a></li>
+            <li><a href='recipes/cuscuz.html' target='_blank' rel='noopener noreferrer'>Cuscuz Recipe</a></li>
+            <li><a href="recipes/tapioca.html" target="_blank" rel="noopener noreferrer">Tapioca Recipe</a></li>
         </ul>
     </body>
 </html>
