--- a/recipes/feijoada.html
+++ b/recipes/feijoada.html
@@ -19,6 +19,8 @@
 
         <p>This hearty dish is a perfect reflection of Brazil's diverse history and cultural fusion. While the concept of a meat and bean stew has roots in Portuguese cuisine, the use of black beans and the distinctly rich, communal style of preparation evolved during the colonial era, often attributed to the ingenuity of enslaved Africans who adapted inexpensive cuts of meat into the dish. What was once sustenance to the oppressed with time became a celebratory tradition, bringing families together on Saturday afternoon around the same delicious food. Follow the steps to make it yourself.</p>
 
+        <br>
+
         <h2>Ingredients</h2>
             <h3>Beans</h3>
             <ul>
@@ -111,6 +113,8 @@
             <li>Oranges</li>
             <li>Hot Sauce</li>
         </ul>
+        
+        <br>
 
         <h2>Steps</h2>
         <p>Follow the step by step process to have a delicious feijoada stewed and ready to be served</p>
@@ -142,6 +146,7 @@
                     <li>
                         <h4>Combine & Start</h4>
                         <p>Place the drained beans, all the pre-cooked meats (ribs, hocks, shoulder, etc...) and the 3 bay leaves into a large, heavy-bottomed pot (a Dutch oven is ideal). Cover with at least 2 inches of fresh water.</p>
+                        <br>
                     </li>
                 </ol>
             </li>
@@ -154,6 +159,7 @@
                     <li>
                         <h4>Add Sausages</h4>
                         <p>After the first simmer, add the sliced smoked and paio sausages to the pot. Continue to simmer, covered, for another 30 minutes to 1 hour.</p>
+                        <br>
                     </li>
                 </ol>
             </li>
@@ -177,7 +183,7 @@
                     </li>
                 </ol>
             </li>
-            <li><strong>Final Seasoning and Finishing</strong>
+            <li><h3>Final Seasoning and Finishing</h3>
                 <ol>
                     <li>
                         <h4>Thickening and Seasoning</h4>
